# agrum

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  justfile
.github/workflows/: rust.yml
docs/: 01-preamble.md  index.md
documentation/: 01-preamble.md  problems-and-approach.md
documentation/adr/: 01-borrowing_in_parameter_holder.md
examples/bike_station/: .ctags  Cargo.toml  tags
examples/bike_station/src/: main.rs  tables.rs
src/: condition.rs  connection.rs  entity.rs  inspector.rs  lib.rs  projection.rs  provider.rs  query.rs  query_book.rs  source.rs  sql_definition.rs  structure.rs  transaction.rs
src/converter/: core_types.rs  mod.rs
src/core/: condition.rs  config.rs  entity.rs  mod.rs  projection.rs  provider.rs  source.rs  structure.rs  transaction.rs
tests/: complex.rs  composite.rs  config.json  config.txt  config.txt.template  data.sql  hello.rs  join.rs  model.rs  parameter_aliases.rs  pool.rs  schema.sql  simple.rs  transaction.rs
tests/utils/: get_client.rs  get_database.rs  mod.rs
