[package]
name = "agrum"
version = "0.2.1"
edition = "2021"
readme = "README.md"
license-file = "LICENSE.txt"
description = "This is a simple database layer proof of concept."
keywords = ["database", "postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures = "0.3.25"
futures-util = "0.3.25"
tokio = {version = "1.22.0", features = ["rt", "macros"]}
tokio-postgres = "0.7.7"
